--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/SHTYKOVYCH/HTML-CSS-Staging#readme",
   "devDependencies": {
-    "express": "^4.17.1"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
